<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        tools:context=".activities.DetailsActivity">

        <ProgressBar
            android:id="@+id/details_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="280dp"
            android:layout_centerInParent="true"/>

            <RelativeLayout
                android:id="@+id/details_content"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/team1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/team_1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        <TextView
            android:id="@+id/team2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/team1_text"
            android:layout_marginStart="-8dp"
            android:layout_toEndOf="@+id/team1_text"
            android:text="@string/team_2"
            android:textSize="18sp"
            android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/time"
                    android:layout_below="@+id/team1_text"/>

                <TextView
                    android:id="@+id/tournament_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/tournament"
                    android:layout_below="@+id/time_text"/>

                <TextView
                    android:id="@+id/place_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/place"
                    android:layout_below="@+id/tournament_text"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/details_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/place_text"/>

                <TextView
                    android:id="@+id/prediction_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/predictions"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/details_recycler_view"/>

                <TextView
                    android:id="@+id/prediction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/prediction"
                    android:layout_below="@+id/prediction_text"/>

            </RelativeLayout>
        </RelativeLayout>
</ScrollView>